--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "mysqlclient (>=2.2.6,<3.0.0)",
     "mysql-connector-python (>=9.1.0,<10.0.0)",
     "alembic (>=1.14.0,<2.0.0)",
-    "sqlmodel (>=0.0.22,<0.0.23)"
+    "sqlmodel (>=0.0.22,<0.0.23)",
+    "fastapi[all] (>=0.115.6,<0.116.0)",
+    "uvicorn (>=0.34.0,<0.35.0)",
+    "passlib (>=1.7.4,<2.0.0)"
 ]
 
 
