--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "sqlmodel (>=0.0.22,<0.0.23)",
     "fastapi[all] (>=0.115.6,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
-    "passlib (>=1.7.4,<2.0.0)"
+    "passlib (>=1.7.4,<2.0.0)",
+    "bcrypt (>=4.2.1,<5.0.0)"
 ]
 
 
