--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "fastapi[all] (>=0.115.6,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "passlib (>=1.7.4,<2.0.0)",
-    "bcrypt (>=4.2.1,<5.0.0)"
+    "bcrypt (>=4.2.1,<5.0.0)",
+    "jwt (>=1.3.1,<2.0.0)"
 ]
 
 
